--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel-admin-ext/config": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "overtrue/laravel-wechat": "~5.0",
         "pudding/showFlex": "dev-master"
     },
