--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "jacobcyl/ali-oss-storage": "^2.1",
         "jxlwqq/env-manager": "^0.1.0",
         "laravel-admin-ext/config": "^1.1",
+        "laravel-admin-ext/media-player": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
